--- a/src/main/resources/fxml/paneAccueil.fxml
+++ b/src/main/resources/fxml/paneAccueil.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="594.0" prefWidth="1551.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="594.0" prefWidth="1551.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="259.0" fitWidth="1554.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../accueil.jpg" />
+            <Image url="@../images/accueil.jpg" />
          </image>
       </ImageView>
       <Pagination layoutY="-1.0" maxPageIndicatorCount="5" pageCount="15" prefHeight="295.0" prefWidth="1554.0" />
