--- a/src/main/resources/fxml/paneAccueil.fxml
+++ b/src/main/resources/fxml/paneAccueil.fxml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Pagination?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="594.0" prefWidth="1551.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="594.0" prefWidth="1551.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.polytech.ihm.AccueilController">
    <children>
-      <ImageView fitHeight="259.0" fitWidth="1554.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imageAccueil" fitHeight="259.0" fitWidth="1554.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/accueil.jpg" />
          </image>
       </ImageView>
-      <Pagination layoutY="-1.0" maxPageIndicatorCount="5" pageCount="15" prefHeight="295.0" prefWidth="1554.0" />
       <Label layoutX="84.0" layoutY="466.0" prefHeight="123.0" prefWidth="1028.0" text="Enseigne créé en 1990, offrant principalement des CD , DVD , livres mais proposant également des stages de développement personnel. Nous proposons un service de livraison inédit en France : livré gratuitement en 24h." wrapText="true">
          <font>
             <Font name="Calibri" size="23.0" />
@@ -30,5 +29,7 @@
             <Font name="Calibri" size="23.0" />
          </font>
       </Label>
+      <Button fx:id="leftButton" layoutX="777.0" layoutY="249.0" mnemonicParsing="false" onAction="#beforeImage" prefHeight="37.0" prefWidth="36.0" text="&lt;" />
+      <Button fx:id="rightButton" layoutX="813.0" layoutY="249.0" mnemonicParsing="false" onAction="#nextImage" prefHeight="37.0" prefWidth="36.0" text="&gt;" />
    </children>
 </Pane>
