--- a/src/main/resources/fxml/base.fxml
+++ b/src/main/resources/fxml/base.fxml
@@ -33,10 +33,10 @@
                      </font>
                   </Label>
                   <Label prefHeight="30.0" text="Email :" textFill="WHITE" underline="true" />
-                  <TextField />
+                  <TextField fx:id="emailField" />
                   <Label prefHeight="30.0" text="Message :" textFill="WHITE" underline="true" />
-                  <TextArea prefHeight="47.0" prefWidth="588.0" />
-                  <Button mnemonicParsing="false" text="Envoyer" />
+                  <TextArea fx:id="textField" prefHeight="47.0" prefWidth="588.0" />
+                  <Button mnemonicParsing="false" onAction="#sendEmail" text="Envoyer" />
                </children>
             </VBox>
             <Label layoutX="867.0" layoutY="115.0" prefHeight="17.0" prefWidth="186.0" text="Copyright 2017 To Be or To Have" textFill="WHITE" />
@@ -100,6 +100,7 @@
                         </Menu>
                      </menus>
                   </MenuBar>
+                  <Button layoutX="1.0" mnemonicParsing="false" onAction="#buttonAccueil" opacity="0.0" prefHeight="128.0" prefWidth="249.0" text="Button" />
                </children>
             </Pane>
          </bottom>
