--- a/src/main/resources/fxml/paneStage.fxml
+++ b/src/main/resources/fxml/paneStage.fxml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="594.0" prefWidth="1551.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="594.0" prefWidth="1551.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.polytech.ihm.StageController">
    <children>
       <VBox layoutX="797.0" layoutY="100.0" prefHeight="413.0" prefWidth="721.0">
          <children>
@@ -20,25 +26,74 @@
                </font>
             </Label>
             <Label prefHeight="30.0" text="ID Stage :" underline="true" />
-            <TextField prefHeight="25.0" prefWidth="147.0" />
+            <TextField fx:id="idStageField" prefHeight="25.0" prefWidth="147.0" />
             <Label prefHeight="30.0" text="Email :" underline="true" />
-            <TextField />
+            <TextField fx:id="emailField" />
             <Label prefHeight="30.0" prefWidth="155.0" text="Informations personnelles :" underline="true" />
-            <TextArea prefHeight="205.0" prefWidth="707.0" />
-            <Button mnemonicParsing="false" text="Envoyer" />
+            <TextArea fx:id="textField" prefHeight="205.0" prefWidth="707.0" />
+            <Button mnemonicParsing="false" onAction="#sendEmail" text="Envoyer" />
          </children>
       </VBox>
-      <TableView layoutX="125.0" layoutY="152.0" prefHeight="317.0" prefWidth="556.0">
-         <columns>
-            <TableColumn prefWidth="96.0" text="ID Stage" />
-            <TableColumn prefWidth="119.0" text="Lieu" />
-            <TableColumn prefWidth="137.0" text="Durée" />
-         </columns>
-      </TableView>
       <Label layoutX="125.0" layoutY="100.0" prefHeight="30.0" text="Stages développement personnel :" underline="true">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
+      <AnchorPane layoutX="117.0" layoutY="157.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0">
+         <children>
+            <SplitPane dividerPositions="0.41304347826086957" layoutX="6.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <items>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="298.0" prefWidth="255.0">
+                     <children>
+                        <TableView fx:id="stageTable" layoutX="22.0" layoutY="49.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <columns>
+                              <TableColumn fx:id="idStageColumn" prefWidth="75.0" text="ID Stage" />
+                              <TableColumn fx:id="villeColumn" prefWidth="75.0" text="Ville" />
+                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="298.0" prefWidth="365.0">
+                     <children>
+                        <Label layoutX="14.0" layoutY="6.0" text="Détails stage de développement personnel" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                        <GridPane layoutX="60.0" layoutY="32.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="30.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <Label text="Date" GridPane.rowIndex="1" />
+                              <Label text="ID Stage" />
+                              <Label text="Durée" GridPane.rowIndex="2" />
+                              <Label text="Magasin" GridPane.rowIndex="3" />
+                              <Label text="Code Postal" GridPane.rowIndex="5" />
+                              <Label GridPane.columnIndex="1" />
+                              <Label fx:id="dureeLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label fx:id="magasinLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label fx:id="codePostalLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label fx:id="dateLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label fx:id="idStageLabel" text="Label" GridPane.columnIndex="1" />
+                              <Label text="Ville" GridPane.rowIndex="4" />
+                              <Label fx:id="villeLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                           </children>
+                        </GridPane>
+                        <ButtonBar layoutX="52.0" layoutY="234.0" prefHeight="40.0" prefWidth="200.0" />
+                     </children>
+                  </AnchorPane>
+               </items>
+            </SplitPane>
+         </children>
+      </AnchorPane>
    </children>
 </Pane>
