--- a/src/main/resources/fxml/base.fxml
+++ b/src/main/resources/fxml/base.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="generalBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.polytech.ihm.controller.BaseController">
+<BorderPane fx:id="generalBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.polytech.ihm.controller.base.BaseController">
    <left>
       <Pane prefHeight="680.0" prefWidth="170.0" style="-fx-background-color: #E5E5E5;" BorderPane.alignment="CENTER" />
    </left>
@@ -101,6 +101,23 @@
                      </menus>
                   </MenuBar>
                   <Button layoutX="1.0" mnemonicParsing="false" onAction="#buttonAccueil" opacity="0.0" prefHeight="128.0" prefWidth="249.0" text="Button" />
+                  <BorderPane fx:id="borderIdentification" layoutX="1666.0" layoutY="1.0" prefHeight="128.0" prefWidth="252.0">
+                     <center>
+                        <Pane prefHeight="128.0" prefWidth="179.0" style="-fx-background-color: #002E78;" BorderPane.alignment="CENTER">
+                           <children>
+                              <VBox layoutX="45.0" layoutY="-8.0" prefHeight="128.0" prefWidth="162.0">
+                                 <children>
+                                    <Label prefHeight="30.0" text="Identifiant :" textFill="WHITE" underline="true" />
+                                    <TextField fx:id="idField" prefHeight="25.0" prefWidth="249.0" />
+                                    <Label prefHeight="30.0" text="Mot de passe :" textFill="WHITE" underline="true" />
+                                    <TextField fx:id="mdpField" prefHeight="9.0" prefWidth="356.0" />
+                                    <Button mnemonicParsing="false" onAction="#buttonAdmin" prefHeight="0.0" prefWidth="101.0" text="Connexion" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </Pane>
+                     </center>
+                  </BorderPane>
                </children>
             </Pane>
          </bottom>
