--- a/src/main/resources/fxml/paneAccueil.fxml
+++ b/src/main/resources/fxml/paneAccueil.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="594.0" prefWidth="1551.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.polytech.ihm.controller.AccueilController">
+<Pane prefHeight="594.0" prefWidth="1551.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.polytech.ihm.controller.accueil.AccueilController">
    <children>
       <ImageView fx:id="imageAccueil" fitHeight="259.0" fitWidth="1554.0" pickOnBounds="true" preserveRatio="true">
          <image>
