--- a/src/main/resources/fxml/paneMagasins.fxml
+++ b/src/main/resources/fxml/paneMagasins.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="594.0" prefWidth="1551.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.polytech.ihm.controller.MagasinController">
+<Pane prefHeight="594.0" prefWidth="1551.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.polytech.ihm.controller.magasins.MagasinController">
    <children>
       <Label layoutX="125.0" layoutY="100.0" prefHeight="30.0" text="Nos magasins :" underline="true">
          <font>
@@ -75,10 +75,5 @@
             </SplitPane>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="666.0" fitWidth="632.0" layoutX="931.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/carteFrance.jpg" />
-         </image>
-      </ImageView>
    </children>
 </Pane>
