--- a/src/main/resources/fxml/base.fxml
+++ b/src/main/resources/fxml/base.fxml
@@ -105,15 +105,7 @@
                      <center>
                         <Pane prefHeight="128.0" prefWidth="179.0" style="-fx-background-color: #002E78;" BorderPane.alignment="CENTER">
                            <children>
-                              <VBox layoutX="45.0" layoutY="-8.0" prefHeight="128.0" prefWidth="162.0">
-                                 <children>
-                                    <Label prefHeight="30.0" text="Identifiant :" textFill="WHITE" underline="true" />
-                                    <TextField fx:id="idField" prefHeight="25.0" prefWidth="249.0" />
-                                    <Label prefHeight="30.0" text="Mot de passe :" textFill="WHITE" underline="true" />
-                                    <TextField fx:id="mdpField" prefHeight="9.0" prefWidth="356.0" />
-                                    <Button mnemonicParsing="false" onAction="#buttonAdmin" prefHeight="0.0" prefWidth="101.0" text="Connexion" />
-                                 </children>
-                              </VBox>
+                              <Button fx:id="buttonAdmin" layoutX="76.0" layoutY="51.0" mnemonicParsing="false" onAction="#buttonAdmin" prefHeight="0.0" prefWidth="101.0" text="Connexion" />
                            </children>
                         </Pane>
                      </center>
