--- a/src/main/resources/fxml/produits/paneLeftProduit.fxml
+++ b/src/main/resources/fxml/produits/paneLeftProduit.fxml
@@ -2,22 +2,20 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<Pane prefHeight="680.0" prefWidth="170.0" style="-fx-background-color: #E5E5E5;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="680.0" prefWidth="170.0" style="-fx-background-color: #E5E5E5;" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.polytech.ihm.controller.produits.RechercheController">
    <children>
-      <VBox fillWidth="false" layoutX="32.0" layoutY="23.0" prefHeight="154.0" prefWidth="106.0">
+      <VBox fillWidth="false" layoutX="32.0" layoutY="23.0" prefHeight="155.0" prefWidth="119.0">
          <children>
             <Label minHeight="40.0" text="Recherche :" />
-            <ChoiceBox prefWidth="150.0" />
-            <CheckBox mnemonicParsing="false" text="CD" />
-            <CheckBox mnemonicParsing="false" text="DVD" />
-            <CheckBox mnemonicParsing="false" text="Livres" />
+            <CheckBox fx:id="checkboxPromos" mnemonicParsing="false" text="Promos" />
+            <CheckBox fx:id="checkboxNouveautes" mnemonicParsing="false" prefHeight="21.0" prefWidth="138.0" text="Nouveautés" />
+            <CheckBox fx:id="checkboxAutres" mnemonicParsing="false" text="Autres" />
             <Label />
-            <Button mnemonicParsing="false" text="Valider" />
+            <Button mnemonicParsing="false" onAction="#recherche" text="Valider" />
          </children>
       </VBox>
    </children>
